payment ui updated
